--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,4 +1,22 @@
-{% extends "index.html" %}
+{% extends 'base.html' %}
 {% block content %}
-    <h1>About me</h1>
-{% endblock %}
+{% load static %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-4 text-center">
+            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+        </div>
+        <div class="col-8">
+            <!-- Title goes between these h2 tags -->
+            <h2>About me</h2>
+            <!-- Content goes directly underneath this -->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col text-right">
+            <!-- Updated on field goes in here -->
+            <p class="text-end"><em>Updated on: </em></p>
+        </div>
+      </div>
+</div>
+{% endblock content %}
