Adding footer in base.html

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -1,9 +1,12 @@
 {% extends "index.html" %}
 {% block content %}
     <h1>Home</h1>
+
+
+
+
 {% endblock %}
-  
-
-
-
- 
+{% block copyright %}
+Copyright 2023 Marzena Skórska
+{% endblock %}
+   
