--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,17 @@
 
 
     <footer>
-
+      <p class="m-0 text-center text-black">
+        {% block copyright %}
+        Copyright 2023 Marzena Skórska
+        {% endblock copyright %}
+      </p>
+      <p class="m-0 text-center text-black">
+        Follow me: <i class="fab fa-facebook-square ms-3"></i>
+        <i class="fab fa-facebook-square ms-3"></i>
+        <i class="fab fa-instagram-square ms-3"></i>
+        <i class="fab fa-youtube-square ms-3"></i>
+      </p>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
