--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Catch a dog</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a7555c1b9b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css %}">
-    <title>Catch a dog</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
     <header>
       <nav>
         <ul>
-            <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="{{ url_for('about') }}">About me</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'about' %}">About me</a></li>
         </ul>
       </nav>
 
@@ -23,9 +26,9 @@
     </header>
 
 
-    <section>
+    <main>
 
-    </section>
+    </main>
 
 
 
@@ -36,7 +39,7 @@
         {% endblock copyright %}
       </p>
       <p class="m-0 text-center text-black">
-        Follow me: <i class="fab fa-facebook-square ms-3"></i>
+        Follow me:
         <i class="fab fa-facebook-square ms-3"></i>
         <i class="fab fa-instagram-square ms-3"></i>
         <i class="fab fa-youtube-square ms-3"></i>
@@ -45,5 +48,9 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="{% static 'js/script.js' %}"></script>
+
+    {% block extras %}
+    {% endblock %}
+
 </body>
 </html>
