--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -1,18 +1,34 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
 
-
+<div class="container-fluid">
 <h1>Reviews list</h1>
 {% for reviews in object_list %}
 <h2>{{reviews}}</h2>
 <p>{{reviews.content}}</p>
 {% endfor %}
- 
+{% if is_paginated %}
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li>
+            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+        </li>
+        {% endif %} {% if page_obj.has_next %}
+        <li>
+            <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
+</div>
+
+
 
 
 {% endblock %}
 {% block copyright %}
 Copyright 2023 Marzena Skórska
 {% endblock %}
-   
