--- a/templates/base.html
+++ b/templates/base.html
@@ -1,56 +1,69 @@
 {% load static %}
-
+{% url 'home' as home_url %}
+{% url 'about' as about_url %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Catch a dog</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a7555c1b9b.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <title>Catch a dog</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/a7555c1b9b.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
 
-    <header>
-      <nav>
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'about' %}">About me</a></li>
-        </ul>
-      </nav>
+  <header>
+    <nav>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link
+              {% if request.path == home_url %}active{%endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link
+              {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'about' %}">About</a>
+        </li>
+      </ul>
+    </nav>
 
-      {% block content %}
-      {% endblock %}
-
-    </header>
-
-
-    <main>
-
-    </main>
-
-
-
-    <footer>
-      <p class="m-0 text-center text-black">
-        {% block copyright %}
-        Copyright 2023 Marzena Skórska
-        {% endblock copyright %}
-      </p>
-      <p class="m-0 text-center text-black">
-        Follow me:
-        <i class="fab fa-facebook-square ms-3"></i>
-        <i class="fab fa-instagram-square ms-3"></i>
-        <i class="fab fa-youtube-square ms-3"></i>
-      </p>
-    </footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-
-    {% block extras %}
+    {% block content %}
     {% endblock %}
 
+  </header>
+
+
+  <main>
+
+  </main>
+
+
+
+  <footer>
+    <p class="m-0 text-center text-black">
+      {% block copyright %}
+      Copyright 2023 Marzena Skórska
+      {% endblock copyright %}
+    </p>
+    <p class="m-0 text-center text-black">
+      Follow me:
+      <i class="fab fa-facebook-square ms-3"></i>
+      <i class="fab fa-instagram-square ms-3"></i>
+      <i class="fab fa-youtube-square ms-3"></i>
+    </p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="{% static 'js/script.js' %}"></script>
+
+  {% block extras %}
+  {% endblock %}
+
 </body>
+
 </html>
