--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,18 +4,19 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            <img src="{% static 'images/about.foto.jpg' %}" width="75%">
         </div>
         <div class="col-8">
             <!-- Title goes between these h2 tags -->
-            <h2>About me</h2>
+            <h2>{{ about.title }}</h2>
             <!-- Content goes directly underneath this -->
+            {{ about.content | safe }}
         </div>
     </div>
     <div class="row">
         <div class="col text-right">
             <!-- Updated on field goes in here -->
-            <p class="text-end"><em>Updated on: </em></p>
+            <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
         </div>
       </div>
 </div>
