--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -16,8 +16,22 @@
     <div class="row">
         <div class="col text-right">
             <!-- Updated on field goes in here -->
-            <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+            <p class="text-end"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
         </div>
       </div>
+</div>
+
+<div class="row">
+<div class="col-4">
+    <img src="{% static 'images/foto1.jpg' %}" width="50%">
+    <img src="{% static 'images/foto2.jpg' %}" width="50%">
+    <img src="{% static 'images/foto3.jpg' %}" width="50%">
+</div>
+<div class="col-4">
+    <img src="{% static 'images/foto4.jpg' %}" width="50%">
+    <img src="{% static 'images/foto5.jpg' %}" width="50%">
+    <img src="{% static 'images/foto6.jpg' %}" width="50%">
+</div>
+
 </div>
 {% endblock content %}
