--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -21,13 +21,13 @@
       </div>
 </div>
 
-<div class="row">
-<div class="col-4">
+<div class="row-2">
+<div class="col-4 text-center">
     <img src="{% static 'images/foto1.jpg' %}" width="50%">
     <img src="{% static 'images/foto2.jpg' %}" width="50%">
     <img src="{% static 'images/foto3.jpg' %}" width="50%">
 </div>
-<div class="col-4">
+<div class="col-4 text-center">
     <img src="{% static 'images/foto4.jpg' %}" width="50%">
     <img src="{% static 'images/foto5.jpg' %}" width="50%">
     <img src="{% static 'images/foto6.jpg' %}" width="50%">
