--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,11 +4,11 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-4 text-center">
-            <img src="{% static 'images/about.foto.jpg' %}" width="75%">
+            <img src="{% static 'images/about.foto.jpg' %}" width="100%" height="80%">
         </div>
         <div class="col-8">
             <!-- Title goes between these h2 tags -->
-            <h2>{{ about.title }}</h2>
+            <h2 class="text-center">{{ about.title }}</h2>
             <!-- Content goes directly underneath this -->
             {{ about.content | safe }}
         </div>
@@ -16,21 +16,55 @@
     <div class="row">
         <div class="col text-right">
             <!-- Updated on field goes in here -->
+           
+                <div class="text-center fs-5 contact-about">
+                <ul class="text-center"><strong>If you want to get more information about therapy or make an
+                        appointment, please contact me
+                        by:</strong></ul><br>
+                <li class="text-center contact-email">email: justyna@gmail.com</li><br>
+                <li class="text-center contact-facebook">
+                    <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
+                        aria-label="Visit-my-Facebook-page (opens in the new tab)">
+                        <i class="fa-brands fa-facebook fa-lg"></i>Facebook</a>
+                </li><br>
+                <li class="text-center contact-instagram">
+                    <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
+                        aria-label="Visit-my-Instagram-page (opens in the new tab)"><i
+                            class="fa-brands fa-instagram fa-lg"></i>Instagram</a>
+                </li><br>
+                </ul>
+            </div>
+          
             <p class="text-end"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
         </div>
-      </div>
+    </div>
 </div>
 
-<div class="row-2">
-<div class="col-4 text-center">
-    <img src="{% static 'images/foto1.jpg' %}" width="50%">
-    <img src="{% static 'images/foto2.jpg' %}" width="50%">
-    <img src="{% static 'images/foto3.jpg' %}" width="50%">
+
+<div class="row">
+
+    <div class="col-12 text-center d-flex flex-row">
+
+        <img src="{% static 'images/foto1.jpg' %}" class="about-gallery">
+
+        <img src="{% static 'images/foto2.jpg' %}" class="about-gallery">
+
+        <img src="{% static 'images/foto3.jpg' %}" class="about-gallery">
+
+    </div>
 </div>
-<div class="col-4 text-center">
-    <img src="{% static 'images/foto4.jpg' %}" width="50%">
-    <img src="{% static 'images/foto5.jpg' %}" width="50%">
-    <img src="{% static 'images/foto6.jpg' %}" width="50%">
+<div class="row">
+
+    <div class="col-12 text-center d-flex flex-row">
+
+        <img src="{% static 'images/foto4.jpg' %}" class="about-gallery">
+
+        <img src="{% static 'images/foto5.jpg' %}" class="about-gallery">
+
+        <img src="{% static 'images/foto6.jpg' %}" class="about-gallery">
+
+    </div>
+
 </div>
 
 </div>
