--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -6,7 +6,7 @@
 <h1>Reviews list</h1>
 {% for reviews in object_list %}
 <h2>{{reviews}}</h2>
-<p>{{reviews.content}}</p>
+<p>{{reviews.content | safe}}</p>
 {% endfor %}
 {% if is_paginated %}
 <nav aria-label="Page navigation">
