Add margin and padding in gallery

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -41,9 +41,9 @@
 </div>
 
 
-<div class="row">
+<div class="row text-center gallery">
 
-    <div class="col-12 text-center d-flex flex-row">
+    <div class="col-12 text-center d-flex flex-row gallery-first">
 
         <img src="{% static 'images/foto1.jpg' %}" class="about-gallery">
 
@@ -52,10 +52,8 @@
         <img src="{% static 'images/foto3.jpg' %}" class="about-gallery">
 
     </div>
-</div>
-<div class="row">
 
-    <div class="col-12 text-center d-flex flex-row">
+    <div class="col-12 text-center d-flex flex-row gallery-second">
 
         <img src="{% static 'images/foto4.jpg' %}" class="about-gallery">
 
