--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,21 @@
     list-style-type: none;
 }
 
+/*  gallery*/
+
+.gallery img {
+    padding-top: 15px; 
+margin-left: 15%;
+}
+
+.gallery-first {
+    margin-right: 15%;
+    
+}
+
+.gallery-second {
+    margin-right: 15%;
+}
+  
+
+
