--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 
 /* about html */
 
@@ -11,23 +17,25 @@
 .contact-about {
     list-style-type: none;
     text-decoration: none;
-    
+
 }
+
 .fa-instagram {
-    color:  #ec22ac;
+    color: #ec22ac;
 }
 
 .contact-email {
     text-decoration: underline;
 }
 
-.contact-instagram, .contact-facebook {
+.contact-instagram,
+.contact-facebook {
     text-decoration: none;
     list-style-type: none;
 }
 
 .contact-instagram a {
-    color:  #ec22ac;
+    color: #ec22ac;
 }
 
 .contact-facebook a {
@@ -37,18 +45,48 @@
 /*  gallery*/
 
 .gallery img {
-    padding-top: 15px; 
-margin-left: 15%;
+    padding-top: 15px;
+    margin-left: 15%;
 }
 
 .gallery-first {
     margin-right: 15%;
-    
+
 }
 
 .gallery-second {
     margin-right: 15%;
 }
-  
 
+/*  footer*/
 
+.footer {
+    background-color: rgb(12, 25, 214);
+    width: 100%;
+}
+
+.footer li {
+    list-style-type: none;
+    display: inline;
+    padding-left: 7px;
+}
+
+.fa-youtube {
+    color: white
+}
+
+.fa-instagram {
+    color: white;
+}
+
+.fa-facebook {
+    color: white;
+}
+
+.site-owner {
+    padding-bottom: 15px;
+}
+
+.social-icons {
+    
+}
