--- a/templates/base.html
+++ b/templates/base.html
@@ -42,17 +42,28 @@
 
 
 
-  <footer>
-    <p class="m-0 text-center text-black">
+  <footer class="footer mt-auto py-3">
+    <p class="m-0 text-center text-white site-owner">
       {% block copyright %}
       Copyright 2023 Marzena Skórska
       {% endblock copyright %}
     </p>
-    <p class="m-0 text-center text-black">
-      Follow me:
-      <i class="fab fa-facebook-square ms-3"></i>
-      <i class="fab fa-instagram-square ms-3"></i>
-      <i class="fab fa-youtube-square ms-3"></i>
+    <p class="m-0 text-center text-white social-icons">
+    <ul class="text-center text-white">Follow me:
+      <li>
+        <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
+          aria-label="Visit-my-Facebook-page (opens in the new tab)">
+          <i class="fa-brands fa-facebook fa-lg"></i></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
+          aria-label="Visit-my-Instagram-page (opens in the new tab)"><i class="fa-brands fa-instagram fa-lg"></i></a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com" target="_blank" rel="noopener"
+          aria-label="Visit-my-youtube-page (opens in the new tab)"><i class="fa-brands fa-youtube fa-lg"></i></a>
+      </li>
+    </ul>
     </p>
   </footer>
 
