--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,8 +1,7 @@
-html,
+/*  body */
+
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+    margin-bottom: 15%;
 }
 
 /* about html */
@@ -63,6 +62,10 @@ body {
 .footer {
     background-color: rgb(12, 25, 214);
     width: 100%;
+    position: fixed;
+    bottom: 0;  
+    width:100%;
+    height: 15%;
 }
 
 .footer li {
