--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,22 @@
   <title>Catch a dog</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Fonts CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Kanit&family=Lato:wght@300&family=Raleway:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
+  <!-- Font Awesome CSS -->
   <script src="https://kit.fontawesome.com/a7555c1b9b.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>
+<body class="d-flex flex-column h-100 main-bg">
 
-  <header>
+  
     <nav>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -33,15 +40,14 @@
     {% block content %}
     {% endblock %}
 
-  </header>
+  
 
 
   <main>
-
   </main>
 
 
-
+   <!-- Footer -->
   <footer class="footer mt-auto py-3">
     <p class="m-0 text-center text-white site-owner">
       {% block copyright %}
