--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,17 +7,16 @@
             <img src="{% static 'images/about.foto.jpg' %}" width="100%" height="80%">
         </div>
         <div class="col-8">
-            <!-- Title goes between these h2 tags -->
+            <!-- Title  -->
             <h2 class="text-center">{{ about.title }}</h2>
-            <!-- Content goes directly underneath this -->
+            <!-- Content -->
             {{ about.content | safe }}
         </div>
     </div>
     <div class="row">
         <div class="col text-right">
-            <!-- Updated on field goes in here -->
-           
-                <div class="text-center fs-5 contact-about">
+
+            <div class="text-center fs-5 contact-about">
                 <ul class="text-center"><strong>If you want to get more information about therapy or make an
                         appointment, please contact me
                         by:</strong></ul><br>
@@ -34,13 +33,13 @@
                 </li><br>
                 </ul>
             </div>
-          
+            <!-- Updated on field -->
             <p class="text-end"><em>Updated on: 7.03.2024 {{ about.updated_on }}</em></p>
         </div>
     </div>
 </div>
 
-
+<!-- Gallery -->
 <div class="row text-center gallery">
 
     <div class="col-12 text-center d-flex flex-row gallery-first">
