--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 {% load static %}
 {% url 'home' as home_url %}
 {% url 'about' as about_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,43 +14,53 @@
   <!-- Google Fonts CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Kanit&family=Lato:wght@300&family=Raleway:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Kanit&family=Lato:wght@300&family=Raleway:wght@300&family=Ubuntu&display=swap"
+    rel="stylesheet">
   <!-- Font Awesome CSS -->
   <script src="https://kit.fontawesome.com/a7555c1b9b.js" crossorigin="anonymous"></script>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
-
-  
-    <nav>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" height="60px"
+          width="60px"></a>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link
               {% if request.path == home_url %}active{%endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link
+          </li>
+          <li class="nav-item">
+            <a class="nav-link
               {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'about' %}">About</a>
-        </li>
-      </ul>
-    </nav>
+          </li>
 
-    {% block content %}
-    {% endblock %}
+          <span class="navbar-text text-end">
+            Zoophysiotherapy & Fitness
+          </span>
+      </div>
+    </div>
+  </nav>
 
-  
+  {% block content %}
+  {% endblock %}
+
+
 
 
   <main>
   </main>
 
 
-   <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer mt-auto py-3">
     <p class="m-0 text-center text-white site-owner">
       {% block copyright %}
