--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,13 @@
           <li class="nav-item">
             <a class="nav-link
               {% if request.path == home_url %}active{%endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
-          </li>
+          </li>  
           <li class="nav-item">
             <a class="nav-link
               {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'about' %}">About</a>
           </li>
 
-          <span class="navbar-text text-end">
+          <span class="navbar-text text-end text-white">
             Zoophysiotherapy & Fitness
           </span>
       </div>
