--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -3,30 +3,41 @@
 {% block content %}
 
 <div class="container-fluid">
-<h1>Reviews list</h1>
-{% for reviews in object_list %}
-<h2>{{reviews}}</h2>
-<p>{{reviews.content | safe}}</p>
-{% endfor %}
-{% if is_paginated %}
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-        {% if page_obj.has_previous %}
-        <li>
-            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
-        </li>
-        {% endif %} {% if page_obj.has_next %}
-        <li>
-            <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
-{% endif %}
+    <div class="row">
+        <!-- Reviews Column -->
+        <div class="col-12 mt-3 left">
+            <div class="row">
+                {% for reviews in object_list %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h2>{{reviews}}</h2>
+                            <p>{{reviews.content | safe}}</p>
+                            <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:3 %}
+            </div>
+            <div class="row">{% endif %} {% endfor %}</div>
+        </div>
+    </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %} {% if page_obj.has_next %}
+            <li>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
-
-
-
 
 {% endblock %}
 {% block copyright %}
