--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
+{% block content %}
 {% load static %}
 
 
-{% block content %}
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
-                <p>{{ reviews.author }} | {{ reviews.created_on }}</p>
+                <p class="post-subtitle">{{ reviews.author }} | {{ reviews.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/background.jpg' %}" class="scale" alt="placeholder image">
+                <img src="{% static 'images/background.jpg' %}" class="scale" alt="placeholder">
             </div>
         </div>
     </div>
@@ -25,8 +25,8 @@
             </div>
         </div>
     </div>
-
 </div>
+
 
 
 {% endblock content %}
