Add navbar toggler

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -14,8 +14,9 @@
                         <div class="card-body">
                             <h2>{{reviews}}</h2>
                             <p>{{reviews.content | safe}}</p>
-                            <a href="{% url 'reviews_detail' %}" class="reviews-link">  
-                            </a>
+                            <a href="{% url 'reviews_detail' %}" class="reviews-link"></a>
+                            
+                            
                             <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
                         </div>
                     </div>
