--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,16 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.jpg' %}" height="60px"
           width="60px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link
               {% if request.path == home_url %}active{%endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
-          </li>  
+          </li>
           <li class="nav-item">
             <a class="nav-link
               {% if request.path == about_url %}active{%endif%}" aria-current="page" href="{% url 'about' %}">About</a>
