--- a/templates/base.html
+++ b/templates/base.html
@@ -61,9 +61,10 @@
               href="{% url 'account_login' %}">Login</a>
           </li>
           {% endif %}
-          <span class="navbar-text text-end text-white">
-            Zoophysiotherapy & Fitness
-          </span>
+        </ul>
+        <span class="navbar-text text-end text-white">
+          Zoophysiotherapy & Fitness
+        </span>
       </div>
     </div>
   </nav>
@@ -71,7 +72,12 @@
   {% block content %}
   {% endblock %}
 
-  <main>
+  <main class="flex-shrink-0 main-bg">
+    {% if user.is_authenticated %}
+    <p class="text-end m-3">You are logged in as {{ user }}</p>
+    {% else %}
+    <p class="text-end m-3">You are not logged in</p>
+    {% endif %}
   </main>
 
   <!-- Footer -->
