--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -9,21 +9,19 @@
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for reviews in object_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h2>{{reviews}}</h2>
-                            <p>{{reviews.content | safe}}</p>
-                            <a href="{% url 'reviews_detail' %}" class="reviews-link"></a>
-                            
-                            
-                            <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
+                <a href="{% url 'reviews_detail' reviews.id %}" class="reviews-link">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h2>{{reviews}}</h2>
+                                <p>{{reviews.content | safe}}</p>
+                                <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                {% if forloop.counter|divisibleby:3 %}
+                    {% if forloop.counter|divisibleby:3 %}{% endif %}
+                    {% endfor %}
+                </a>
             </div>
-            <div class="row">{% endif %} {% endfor %}</div>
         </div>
     </div>
     {% if is_paginated %}
