--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -14,7 +14,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div class="col card mb-4  mt-3 left top">
             <div class="card-body">
                 <div class="col-md-6 masthead-text text-start">
                     <p class="post-subtitle">{{ review.author }} | {{ review.created_on }}</p>
@@ -25,24 +25,29 @@
             </div>
         </div>
     </div>
-    <!-- Displaying count of comments -->
+
+
+
+
+
+    <!-- Displaying count of comments and likes -->
     <div class="row">
         <div class="col-12">
             <strong class="text-secondary">
                 <i class="far fa-comments"></i> {{ comment_count }}
             </strong>
-            <strong class="text-secondary">
-                <i class="far fa-heart"></i> {{ review_likes  }}
+            <strong class="text-secondary"> 
+                <button type="submit" name="review_id" class="btn-like"><i class="fas fa-heart"> {{ review_likes }}</i></button> 
             </strong>
         </div>
     </div>
-    <!-- Displaying count of likes -->
+
     <!-- Displaying Comments -->
     <div class="row">
         <div class="col-md-8 card mb-4  mt-3 ">
             <h3>Comments:</h3>
             <div class="card-body">
-             
+
                 {% for comment in comments %}
                 <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
