Make image in reviews_detail responsive

--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -6,8 +6,8 @@
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
-            <div class="d-none d-md-block col-md-6 masthead-image background-image">
-                <img src="{% static 'images/background.jpg' %}" class="img-fluid" alt="placeholder">
+            <div class="col-12 masthead-image background-image text-center">
+                <img src="{% static 'images/background.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="placeholder">
             </div>
         </div>
     </div>
