--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,13 +2,13 @@
 {% block content %}
 {% load static %}
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-4 text-center">
-            <img src="{% static 'images/about.foto.jpg' %}" width="100%" height="80%">
+    <div class="row text-center">
+        <div class="col-12 text-center image-about">
+            <img src="{% static 'images/about.foto.jpg' %}">
         </div>
-        <div class="col-8">
+        <div class="col-12">
             <!-- Title  -->
-            <h2 class="text-center">{{ about.title }}</h2>
+            <h2>{{ about.title }}</h2>
             <!-- Content -->
             {{ about.content | safe }}
         </div>
