Edit footer size and navbar toggler color

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,28 +81,28 @@
   </main>
 
   <!-- Footer -->
-  <footer class="footer mt-auto py-3">
+  <footer class="footer mt-auto">
     <p class="m-0 text-center text-white site-owner">
       {% block copyright %}
       Copyright 2023 Marzena Skórska
       {% endblock copyright %}
     </p>
     <p class="m-0 text-center text-white social-icons">
-    <ul class="text-center text-white">Follow me:
-      <li>
-        <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
+     <ul class="text-center text-white">Follow me:
+       <li>
+         <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
           aria-label="Visit-my-Facebook-page (opens in the new tab)">
-          <i class="fa-brands fa-facebook fa-lg"></i></a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
+           <i class="fa-brands fa-facebook fa-lg"></i></a>
+       </li>
+       <li>
+         <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
           aria-label="Visit-my-Instagram-page (opens in the new tab)"><i class="fa-brands fa-instagram fa-lg"></i></a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com" target="_blank" rel="noopener"
+       </li>
+       <li>
+         <a href="https://www.youtube.com" target="_blank" rel="noopener"
           aria-label="Visit-my-youtube-page (opens in the new tab)"><i class="fa-brands fa-youtube fa-lg"></i></a>
-      </li>
-    </ul>
+       </li>
+     </ul>
     </p>
   </footer>
 
