--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -33,6 +33,10 @@ a:hover {
     color: black;
 }
 
+.navbar-toggler {
+    background-color: white;
+}
+
 /* reviews - home page */
 
 h2 {
@@ -120,7 +124,7 @@ h2 {
 
 .gallery-second {
     margin-right: 15%;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
 }
 
 /* footer */
@@ -128,11 +132,8 @@ h2 {
 .footer {
     background-color: rgb(12, 25, 214);
     width: 100%;
-    position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 13%;
-    
+    height: 10%;
 }
 
 .footer li {
@@ -154,7 +155,13 @@ h2 {
 }
 
 .site-owner {
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.social-icons {
+    margin: 0;
+    padding: 0;
 }
  /* pagination */
 
