Add buttons for Like and Unlike to reviews

--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -34,8 +34,10 @@
                 <i class="far fa-comments"></i> {{ comment_count }}
             </strong>
             <strong class="text-secondary"> 
-                <button type="submit" name="review_id" class="btn-like"><i class="fas fa-heart"> {{ review_likes }}</i></button> 
-            </strong>
+                <button type="submit" name="review_id" class="btn-like"><i class="fas fa-heart"> {{ num_likes }}</i></button> 
+          
+          
+              </strong>
         </div>
     </div>
 
