--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
           {% endif %}
         </ul>
         <span class="navbar-text text-end text-white">
-          Zoophysiotherapy & Fitness
+          ADVANCED ZOOPHYSIOTHERAPY & FITNESS
         </span>
       </div>
     </div>
