--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,3 +177,11 @@ h2 {
     background-color: red;
     color: white;
 }
+
+.btn-delete-review {
+    background-color: red;
+}
+
+.btn-edit-review {
+    background-color: green;
+}
