--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -17,40 +17,46 @@
   <div class="row">
     <div class="col card mb-4  mt-3 left top">
       <div class="card-body">
-        <div class="col-md-6 masthead-text text-start">
-          <p class="post-subtitle"><strong>{{ review.author }} | {{ review.created_on }}</strong></p>
+        {% for reviw in reviews %}
+        <div class="p-2 reviews{% if not review.approved and review.author == user %} faded{% elif not review.approved %} d-none{% endif %}">
+          <div class="col-md-6 masthead-text text-start">
+            <p class="post-subtitle"><strong>{{ review.author }} | {{ review.created_on }}</strong></p>
+          </div>
+          <div class="card-text" review_id="{{ review.id }}">
+            {{ review.content | safe }}
+          </div>
+          {% if not review.approved and review.author == user %}
+          <p class="approval">This review is awaiting approval</p>
+          {% endif %}
+          {% if user.is_authenticated and review.author == user %}
+          <button class="btn btn-delete-review review" review_id="{{ review.id }}">Delete</button>
+          <button class="btn btn-edit-review review" review_id="{{ review.id }}">Edit</button>
+          {% endif %}
         </div>
-        <p class="card-text">
-          {{ review.content | safe }}
-        </p>
-        {% if user.is_authenticated and review.author == user %}
-        <button class="btn btn-delete-review review" review_id="{{ review.id }}">Delete</button>
-        <button class="btn btn-edit-review review" review_id="{{ review.id }}">Edit</button>
-        
-        {% endif %}
+        {% endfor %}
       </div>
     </div>
   </div>
-<!-- Delete confirmation modal for reviews -->
-<div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete your review?
-        This action cannot be undone.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a id="deleteConfirmReview" href="#" class="btn
+  <!-- Delete confirmation modal for reviews -->
+  <div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete your review?
+          This action cannot be undone.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <a id="deleteConfirmReview" href="#" class="btn
           btn-danger">Delete</a>
+        </div>
       </div>
     </div>
   </div>
-</div> 
 
   <!-- Displaying count of comments and  review likes -->
   <div class="row">
