--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -30,4 +30,5 @@
 
 {% block extras %}
 <script src="{% static 'js/reviews.js' %}"></script>
+<script src="{% static 'js/comments.js' %}"></script>
 {% endblock %}
