--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -14,7 +14,7 @@
                 <a href="{% url 'reviews_detail' reviews.id %}" class="reviews-link">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3>{{reviews}}</h3>
+                            <h3 class="text-decoration-underline">{{reviews}}</h3>
                             <p>{{reviews.content | safe}}</p>
                             <p class="card-text text-muted h6">{{ reviews.created_on}}</p>
                         
