Edit welcome paragraph

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -8,7 +8,7 @@
         <!-- Reviews Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-                <h2 class="text-center text-decoration-underline">Welcome to my Catch a <i class="fa-solid fa-dog" style="color: #2f15f4;"></i>
+                <h2 class="text-center text-decoration-underline">Welcome to my Catch a Dog<br><i class="fa-solid fa-dog" style="color: #2f15f4;"></i>
                     website!</h2><br><h3 class="text-center">A website dedicated to therapy and rehabilitation for animals. You can read and comment
                     on others' reviews. If your dog or cat was my client and you want to share your opinion with others,
                     please you are welcome to do so
