Add alt attribute for all images

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <div class="row text-center">
         <div class="col-12 text-center image-about">
-            <img src="{% static 'images/about.foto.jpg' %}">
+            <img src="{% static 'images/about.foto.jpg' %}" alt="dog with owner">
         </div>
         <div class="col-12">
             <!-- Title  -->
@@ -43,24 +43,24 @@
 <div class="container text-center">
     <div class="row text-center d-flex flex-row gallery">
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-            <img src="{% static 'images/foto1.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto1.jpg' %}" alt="dog" class="about-gallery">
         </div>
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-            <img src="{% static 'images/foto2.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto2.jpg' %}" alt="dog 1" class="about-gallery">
         </div>
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-            <img src="{% static 'images/foto3.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto3.jpg' %}" alt="dog 2" class="about-gallery">
         </div>
     </div>
     <div class="row text-center d-flex flex-row gallery">
         <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-lg-4">
-            <img src="{% static 'images/foto4.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto4.jpg' %}" alt="dog 3" class="about-gallery">
         </div>
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-            <img src="{% static 'images/foto5.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto5.jpg' %}" alt="dog 4" class="about-gallery">
         </div>
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
-            <img src="{% static 'images/foto6.jpg' %}" class="about-gallery">
+            <img src="{% static 'images/foto6.jpg' %}" alt="dog 5" class="about-gallery">
         </div>
     </div>
 </div>
